# rust

./: .gitignore  README.md
learn/async_test/: Cargo.toml
learn/async_test/src/: main.rs
learn/closures/src/: main.rs
learn/cortex-m-quickstart-master/: Cargo.toml
learn/generic_arg/: Cargo.toml
learn/generic_arg/src/: main.rs
learn/hashmap/src/: main.rs
learn/iter_test/: Cargo.toml
learn/iter_test/src/: main.rs
learn/minigrep/: Cargo.toml
learn/minigrep/src/: main.rs
learn/minigrep_lib/: Cargo.toml
learn/minigrep_lib/src/: lib.rs
learn/panic_file_test/: Cargo.toml
learn/panic_file_test/src/: main.rs
learn/pointer/src/: main.rs
learn/rust_slint/: Cargo.toml
learn/rust_slint/.config/: config
learn/rust_slint/src/: main.rs
learn/stm32f4-embassy/: Cargo.toml  build.rs  rust-toolchain.toml
learn/stm32f4-embassy/.cargo/: config.toml
learn/stm32f4-embassy/src/: main.rs
learn/thread/src/: main.rs
learn/trait_1/: Cargo.toml
learn/trait_1/src/: main.rs
learn/trait_lib_1/: Cargo.toml
learn/trait_lib_1/src/: lib.rs
project/bom_manage/: Cargo.toml  data_resource.db  history.txt
project/bom_manage/src/: main.rs
project/bom_manage_lib/: Cargo.toml  data_resource.db
project/bom_manage_lib/src/: lib.rs
project/cli_test/: Cargo.toml
project/cli_test/src/: main.rs
project/ebook_reader_cmdline/: Cargo.toml  config.json  ebook_reader_cmdline  lq.txt  readme.md
project/ebook_reader_cmdline/src/: main.rs
project/ele_ds_server_ui/: Cargo.toml  build.rs
project/ele_ds_ui/: Cargo.toml
project/stm32f103/: Cargo.toml
(+8 files in other folders)
