[package]
name = "stm32f4-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心依赖
embassy-stm32 = {version = "0.1.0", features =  ["defmt", "time-driver-any", "stm32f407zg", "memory-x", "unstable-pac", "exti"]}
embassy-executor = { version = "0.6.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

# 关联不大的依赖
defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"

[patch.crates-io]
# 使用 git ls-remote https://github.com/embassy-rs/embassy.git HEAD 获取最新 rev
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "f0a86070512ad739641cee7d9fa39d63f5c8a9f6" }

[profile.release]
debug = 2